changed to getFirst on getAllUsers_shouldReturnListOfUserDTOs